# risc2cpp

./: .gitignore  LICENSE-MIT  README.md  risc2cpp.cabal
docs/: benchmark.md  how_risc2cpp_works.md  instructions.md
src/: Main.hs
src/Risc2cpp/: BasicBlock.hs  CodeGen.hs  ExtractCode.hs  Intermediate.hs  LocalVarAlloc.hs  Misc.hs  RiscV.hs  RiscVToIntermed.hs  Simplifier.hs
src/RiscV2Cpp/: BasicBlock.hs  CodeGen.hs  ExtractCode.hs  Intermediate.hs  LocalVarAlloc.hs  Mips.hs  MipsToIntermed.hs  Misc.hs  Simplifier.hs
tests/: README.md  build_elfs.py  run_tests.py
tests/asm/: start.S
tests/elf/: arith.risc  bad_jump.risc  bad_read.risc  bad_write.risc  branches.risc  compares.risc  exceptions.risc  fizzbuzz.risc  hello.risc  int64_test.risc  jumps.risc  loads_stores.risc  mandelbrot.risc  muldiv.risc  prime_sieve.risc  qsort_test.risc  recursion.risc  shifts.risc  static_init.risc  strings.risc
tests/expected/: arith.txt  bad_jump.txt  bad_write.txt  branches.txt  compares.txt  exceptions.txt  int64_test.txt  jumps.txt  loads_stores.txt  mandelbrot.txt  muldiv.txt  prime_sieve.txt  qsort_test.txt  recursion.txt  shifts.txt  static_init.txt  strings.txt
tests/harness/: test_main.cpp
tests/src/: arith.S  bad_jump.c  bad_read.c  bad_write.c  branches.S  compares.S  exceptions.cpp  fizzbuzz.c  int64_test.c  jumps.S  loads_stores.S  mandelbrot.c  muldiv.S  prime_sieve.cpp  qsort_test.c  recursion.c  shifts.S  static_init.cpp  strings.c
