cabal-version: 2.2
name:          risc2cpp
version:       0.1.0.0
license:       BSL-1.0
author:        Stephen Thompson
build-type:    Simple

executable risc2cpp
  main-is:             Main.hs
  other-modules:       Risc2cpp.BasicBlock
                     , Risc2cpp.CodeGen
                     , Risc2cpp.ExtractCode
                     , Risc2cpp.Intermediate
                     , Risc2cpp.LocalVarAlloc
                     , Risc2cpp.Misc
                     , Risc2cpp.RiscV
                     , Risc2cpp.RiscVToIntermed
                     , Risc2cpp.Simplifier
  build-depends:       base >= 4 && < 5
                     , containers
                     , bytestring
                     , filepath
                     , elf
                     , optparse-applicative
  hs-source-dirs:      src
  default-language:    Haskell2010
